test/fail/if.m8
ßÜíxßø¼0ßøÁßøùxßø¼ßø¼0xßøğßø¼1ßøÄxßø¡ßø¼2